--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@ html {
 }
 
 main {
-margin-bottom: 250px;
+margin-bottom: 270px;
 }
 
 footer.footer {
@@ -23,6 +23,7 @@ p {
 
 .hero-scene{
     position: relative;
+    margin-bottom: 15px;
     &::before{
         content:"";
         position: absolute;
@@ -58,7 +59,8 @@ p {
 .image-card{
     position:relative;
     &:hover{
-        .titre-image{
+        .titre-image,
+        .action-image-buttons{
             opacity: 1;
         }
         img{
@@ -78,10 +80,35 @@ p {
         opacity: 0;
         transition: all 0.3s;
     }
+
+    .action-image-buttons {
+        position : absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 5px;
+        display: flex;
+        justify-content: space-between;
+
+        opacity: 0;
+        transition: all 0.3s; 
+    }
 }
 
 .img-portrait {
     object-fit: cover;
     height :350px
 
+}
+
+.form-label {
+    color: $primary;
+}
+
+.allreservations{
+    a{
+        display: block;
+        color: $black;
+        padding:10px;
+    }
 }
